Kill margin above <p> tag, fixes spacing on /about

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -11,6 +11,9 @@ a {
         color: #00cc00;
     }
 }
+p {
+    margin-top: 0;
+}
 #main_container {
     margin-left: auto;
     margin-right:auto;
